Lesson06 HW6 Comparator, MapResumeStorage, corrected JUnit tests, updated Interface, new field at Resume